lessons/175/k8s/service-a/0-service-a-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-a
  labels:
    mesh: dev-demo-eks
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
