lessons/175/k8s/service-a/6-service-a-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      serviceAccountName: service-a
      containers:
        - name: service-a
          image: aputra/myapp-175:v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
